# tree-sitter-starlark

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  release.yml
bindings/c/: tree-sitter-starlark.h  tree-sitter-starlark.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_starlark/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: starlark.h
bindings/swift/TreeSitterStarlarkTests/: TreeSitterStarlarkTests.swift
examples/: 02-foo.bzl  03-bar.bzl
queries/: highlights.scm  locals.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: expressions.txt  literals.txt  load.txt  pattern_matching.txt  statements.txt  struct.txt
test/highlight/: keywords.bzl  pattern_matching.bzl
